--- a/src/MemoryVisualizer.UI/packages.config
+++ b/src/MemoryVisualizer.UI/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Expression.Blend.Sdk" version="1.0.2" targetFramework="net45" />
   <package id="FsXaml.Wpf" version="0.9.9" targetFramework="net45" />
+  <package id="Microsoft.Diagnostics.Runtime" version="0.8.31-beta" targetFramework="net45" />
 </packages>
